# solana-mev-bot

./: .gitattributes  .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
cached-blockchain-data/: raydium_pools.json  tokens.json
client/: Cargo.toml  check.sh  notes.txt
client/src/: deshred.rs  get_shreds.rs  graph.rs  lib.rs  main.rs  target_dexes.rs
client/src/bootstrap/: meteora.rs  mod.rs  orca.rs  pool_schema.rs  raydium.rs
client/src/decoders/: mod.rs  orca_decoder.rs  raydium_decoder.rs
client/src/transaction_decoders/: jupiter_v6.rs  meteora_dlmm.rs  meteora_v2.rs  meteora_v3.rs  mod.rs  orca_v3.rs  raydium_v2.rs  raydium_v3.rs
client/tests/: integration_test_project_setup.rs
client/tests/test_data/: raydium_pools.json
jito_protos/: Cargo.toml  build.rs
src/: build_graph.rs  find_matching_pairs.rs  graph.rs  lib.rs  main.rs
src/bootstrap/: mod.rs  orca.rs  pool_schema.rs  raydium.rs
src/decoders/: mod.rs  orca_decoder.rs  raydium_decoder.rs
tests/: integration_test_project_set_up.rs  integration_test_project_setup.rs
tests/test_data/: orca_pools.json
