[package]
name = "solana-mev-bot"
version = "0.1.0"
edition = "2024"


[profile.dev]
opt-level = 1
panic = "unwind"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"


[dependencies]
anyhow = "1.0.99"
futures = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
orca_whirlpools = "5.0.0"
orca_whirlpools_client = "5.0.0"
reqwest = "0.12.23"
serde = "1.0.219"
serde_json = "1.0.143"
serde_path_to_error = "0.1.17"
solana-account-decoder = "3.0.1"
solana-client = "3.0.1"
solana-commitment-config = "3.0.0"
solana-sdk = "3.0.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
