[workspace]
members = ["client", "jito_protos"]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = "Solana MEV Bot"
authors = ["Oleksii Radchenko"]
edition = "2024"

[profile.dev]
opt-level = 1
panic = "unwind"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"


[workspace.dependencies]
anyhow = "1.0.100"
ethnum = "1.5.2"
futures = "0.3.31"
lazy_static = "1.5.0"
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_path_to_error = "0.1.20"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tonic = { version = "0.14.2", features = ["tls-webpki-roots"] }
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
tonic-prost = "0.14.2"
bincode = "1.3.3"
solana-entry = "3.0.5"
solana-sdk = "3.0.0"
solana-client = "3.0.5"
solana-commitment-config = "3.0.0"
prost = "0.14.1"
prost-types = "0.14.1"
jito-protos = { path = "jito_protos" }