[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { workspace = true }
jito-protos = { path = "../jito_protos" }
solana-entry = { workspace = true }
anyhow = { workspace = true }
ethnum = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }

[[client]]
name="lib"
path = "src/lib.rs"