[package]
name = "jito-protos"
version = { workspace = true }
description = "Protobufs for working with block engine"
authors = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost = { workspace = true }
protobuf-src = "2.1.1"
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }